Favoriting the properties

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,9 +23,15 @@
               xmlns="http://www.w3.org/2000/svg"
               class="h-8 w-8 cursor-pointer"
               data-controller="favorites"
-              data-favorited="false"
+              data-user-logged-in="<%= user_signed_in? %>"
+              data-user-id="<%= current_user&.id %>"
+              data-property-id="<%= property.id %>"
+              data-favorite-url="<%= api_favorites_path %>"
+              data-unfavorite-url="<%= api_favorite_path(current_user.favorites.find_by(property: property)) if current_user&.favorited_properties.include?(property) %>"
+              data-favorite-id="<%= current_user.favorites.find_by(property: property).id if current_user&.favorited_properties.include?(property) %>"
+              data-favorited="<%= current_user&.favorites.where(property: property).exists? %>"
               data-action="click->favorites#favorite"
-              fill="#ced4da"
+              fill="<%= current_user&.favorited_properties.include?(property) ? 'red' : '#ced4da' %>"
               viewBox="0 0 24 24"
               stroke="currentColor"
               stroke-width="2"
