Set up the share modal and refactor the modal component

--- a/app/views/shared/_modal.html.erb
+++ b/app/views/shared/_modal.html.erb
@@ -1,13 +1,14 @@
 <!-- This example requires Tailwind CSS v2.0+ -->
 <div
   data-controller="modal"
-  id="modal-wrapper"
+  data-modal-trigger-id="<%= modal_trigger_id %>"
+  id="modal-<%= modal_trigger_id %>-wrapper"
   class="hidden relative z-10"
   aria-labelledby="modal-title"
   role="dialog"
   aria-modal="true"
 >
-  <div class="hidden" id="modal-trigger" data-action="click->modal#showModal"></div>
+  <div class="hidden" id="<%= modal_trigger_id %>" data-action="click->modal#showModal"></div>
   <!--
     Background backdrop, show/hide based on modal state.
 
@@ -19,7 +20,7 @@
       To: "opacity-0"
   -->
   <div
-    id="modal-backdrop"
+    id="modal-<%= modal_trigger_id %>-backdrop"
     class="hidden fixed inset-0 bg-gray-500 bg-opacity-75 transition-opacity"
     data-transition-enter="ease-out duration-300"
     data-transition-enter-start="opacity-0"
@@ -42,7 +43,7 @@
           To: "opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
       -->
       <div
-        id="modal-panel"
+        id="modal-<%= modal_trigger_id %>-panel"
         class="hidden relative bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:max-w-xl sm:w-full sm:p-6"
         data-transition-enter="ease-out duration-300"
         data-transition-enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
