--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -54,7 +54,7 @@
           <div>
             <button data-header-target="openUserMenu" type="button" class="bg-gray-800 rounded-full flex text-sm text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
               <span class="sr-only">Open user menu</span>
-              <%= image_tag current_user&.profile&.picture || default_profile_picture, class: "h-8 w-8 rounded-full" %>
+              <%= image_tag current_user&.profile&.picture.present? ? current_user&.profile&.picture : default_profile_picture, class: "h-8 w-8 rounded-full" %>
             </button>
           </div>
 
@@ -106,7 +106,7 @@
     <div class="border-t border-gray-700 pt-4 pb-3">
       <div class="px-4 flex items-center">
         <div class="flex-shrink-0">
-          <%= image_tag current_user&.profile&.picture || default_profile_picture, class: "h-10 w-10 rounded-full" %>
+          <%= image_tag current_user&.profile&.picture.present? ? current_user&.profile&.picture : default_profile_picture, class: "h-10 w-10 rounded-full" %>
         </div>
         <div class="ml-3">
           <div class="text-base font-medium text-white"><%= current_user&.full_name %></div>
